--- a/packages/energy/geysers.yaml
+++ b/packages/energy/geysers.yaml
@@ -44,7 +44,7 @@ script:
             {% set today_name = sensor_names[now().weekday()] %}
             {% if today_name == 'sunday_disable' %}{{ 300 | int * 60 }}
             {% elif '17:00' <= states('sensor.time') <= '18:00' %}{{ 180 | int * 60 }}
-            {% elif '00:00' <= states('sensor.time') <= '06:00' %}{{ 59 | int * 60 }}
+            {% elif '00:00' <= states('sensor.time') <= '06:00' %}{{ 30 | int * 60 }}
             {% else %}{{ 180 | int * 60 }}{% endif -%}
       # If device is unavailable, need a retry loop here
       - alias: "Repeat the sequence UNTIL the conditions are true"
@@ -170,7 +170,7 @@ automation:
                   - condition: and
                     conditions:
                       - condition: template
-                        value_template: "{{ ('13:30' <= states('sensor.time') <= '15:00') }}"
+                        value_template: "{{ ('13:30' <= states('sensor.time') < '15:00') }}"
                       - condition: state
                         entity_id: timer.main_geyser
                         state: 'idle'
@@ -187,7 +187,7 @@ automation:
                 for:
                   hours: 6
               - condition: template
-                value_template: "{{ ('15:00' < states('sensor.time') < '18:05') }}"
+                value_template: "{{ ('15:00' <= states('sensor.time') < '18:05') }}"
             sequence:
               - service: script.geyser_on_mainbedroom
           - conditions:
@@ -200,12 +200,12 @@ automation:
                 conditions:
                   - condition: numeric_state
                     entity_id: sensor.average_temperature_outside_last_1_day
-                    below: '17.4'
+                    below: '19.4'
                   - condition: and
                     conditions:
                       - condition: numeric_state
                         entity_id: sensor.average_temperature_outside_last_1_day
-                        below: '22'
+                        below: '24.5'
                       - condition: numeric_state
                         entity_id: sensor.solcast_forecast_energy_today_predicted
                         above: '26.1'
@@ -258,7 +258,7 @@ automation:
                 data_template:
                   entity_id: timer.main_geyser
                   duration: >
-                    {{ 59 | int * 60 }}
+                    {{ 45 | int * 60 }}
         # No conditions met so default time
         default:
           - service: timer.start
@@ -326,8 +326,8 @@ automation:
         value_template: "{{ states('sensor.time') == (state_attr('input_datetime.front_geyser_on_time', 'timestamp') | int | timestamp_custom('%H:%M', False)) }}"
       - platform: template
         value_template: "{{ states('sensor.time') == (state_attr('input_datetime.main_geyser_on_time', 'timestamp') | int | timestamp_custom('%H:%M', False)) }}"
-      - platform: time
-        at: '10:35:00'
+      #- platform: time
+      #  at: '10:35:00'
     action:
       - choose:
           # Turn on between 11am and 2pm for sun times
