--- a/packages/presence/device_tacker_triggers.yaml
+++ b/packages/presence/device_tacker_triggers.yaml
@@ -6,8 +6,8 @@ binary_sensor:
     both_parent_phones_charging:
       friendly_name: "Is both parents phones charging"
       value_template: >-
-        {{ (is_state('sensor.mi_9t_battery_state', 'charging')
-          or is_state('sensor.mi_9t_battery_state', 'full'))
+        {{ (is_state('sensor.pixel_4_battery_state', 'charging')
+          or is_state('sensor.pixel_4_battery_state', 'full'))
           and (is_state('sensor.nokia_6_1_battery_state', 'charging')
           or is_state('sensor.nokia_6_1_battery_state', 'full')) }}
       # silly workaround needed - mi9t phone shows not_charging when in fact charging...
@@ -15,8 +15,8 @@ binary_sensor:
     either_parent_phones_charging:
       friendly_name: "Is either parents phones charging"
       value_template: >-
-        {{ (is_state('sensor.mi_9t_battery_state', 'charging')
-          or is_state('sensor.mi_9t_battery_state', 'full'))
+        {{ (is_state('sensor.pixel_4_battery_state', 'charging')
+          or is_state('sensor.pixel_4_battery_state', 'full'))
           or (is_state('sensor.nokia_6_1_battery_state', 'charging')
           or is_state('sensor.nokia_6_1_battery_state', 'full')) }}
 
