--- a/packages/scrape.yaml
+++ b/packages/scrape.yaml
@@ -18,7 +18,7 @@ automation:
         data:
           icon: ':earth_africa:'
           object: 'Google Cache'
-          target: 'alerts-david'
+          target: 'logs'
           message: >
             Redirect updated To: {{ states.sensor.google_cache_redirector.state }}
       - alias: "Alert change from"
@@ -26,6 +26,6 @@ automation:
         data:
           icon: ':earth_africa:'
           object: 'Google Cache'
-          target: 'alerts-david'
+          target: 'logs'
           message: >
             Redirect updated From: {{ trigger.from_state.state }}
