--- a/packages/security/alarm_notifications.yaml
+++ b/packages/security/alarm_notifications.yaml
@@ -94,9 +94,12 @@ automation:
       - entity_id: binary_sensor.alarm_trouble
         platform: state
         to: 'off'
-    condition: []
+    condition:
+      - condition: template
+        value_template: >
+          {{ trigger.from_state.state != trigger.to_state.state }}
     action:
-      - service: script.alert
+      - service: script.log
         data:
           icon: ':rotating_light:'
           object: 'Home Alarm'
@@ -116,7 +119,7 @@ automation:
         to: 'off'
     condition: []
     action:
-      - service: script.alert
+      - service: script.log
         data:
           icon: ':rotating_light:'
           object: 'Home Alarm'
@@ -136,7 +139,7 @@ automation:
           seconds: 0
     condition: []
     action:
-      - service: script.alert
+      - service: script.log
         data:
           icon: ':rotating_light:'
           object: 'Home Alarm'
@@ -155,7 +158,7 @@ automation:
         for:
           minutes: 30
     action:
-      - service: script.alert
+      - service: script.log
         data:
           icon: ':rotating_light:'
           object: 'Home Alarm'
